<resources>
    <string name="app_name" translatable="false">CashCoach</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_week">Week</string>
    <string name="lbl_expenses">Expenses</string>
    <string name="lbl_usd" translatable="false">USD</string>
    <string name="msg_don_t_have_an_a">Don\u2019t have an account yet? Sign Up</string>
    <string name="lbl_subscription">Subscription</string>
    <string name="msg_confirm_passwor">Confirm Password</string>
    <string name="msg_add_new_walle">+ Add new wallet</string>
    <string name="lbl_salary">Salary</string>
    <string name="lbl_home">Home</string>
    <string name="msg_already_have_an">Already have an account? Log in</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_slovenian_slo">Slovenian (SLO)</string>
    <string name="msg_financial_repor">Financial Report</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_08_30" translatable="false">08:30</string>
    <string name="lbl_charging_tesla">Charging Tesla</string>
    <string name="lbl_12_99" translatable="false">- 12,99\u20ac</string>
    <string name="msg_forgot_password">Forgot Password?</string>
    <string name="lbl_salary_for_july">Salary for July</string>
    <string name="lbl_month">Month</string>
    <string name="lbl_expense">Expense</string>
    <string name="lbl_report">Report</string>
    <string name="lbl_october">October</string>
    <string name="lbl_add_new_wallet">Add New Wallet</string>
    <string name="lbl_1_6202" translatable="false">1.620\u20ac</string>
    <string name="lbl_light">Light</string>
    <string name="lbl_10_00" translatable="false">10:00</string>
    <string name="lbl_currency">Currency</string>
    <string name="msg_amet_minim_moll" translatable="false">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</string>
    <string name="lbl_wallet_type">Wallet Type</string>
    <string name="lbl_income">Income</string>
    <string name="lbl_800" translatable="false">800\u20ac</string>
    <string name="lbl_english_en">English (EN)</string>
    <string name="lbl_let_s_go">Let\u2019s go</string>
    <string name="lbl_136_4" translatable="false">136,4\u20ac</string>
    <string name="lbl_03_30" translatable="false">03:30</string>
    <string name="msg_recent_transact">Recent Transactions</string>
    <string name="lbl_120" translatable="false">- 120\u20ac</string>
    <string name="lbl_terms">By signing up, you agree to the Terms of Service and Privacy Policy</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_yesterday">Yesterday</string>
    <string name="lbl_language">Language</string>
    <string name="lbl_1202" translatable="false">120\u20ac</string>
    <string name="lbl_subcription">Subcription</string>
    <string name="lbl_groceries">Groceries</string>
    <string name="msg_don_t_worry_yo">Don\u2019t worry, you can add more wallets later.</string>
    <string name="lbl_account">Account</string>
    <string name="lbl_shopping">Shopping</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_dark">Dark</string>
    <string name="lbl_main_wallet">Main Wallet</string>
    <string name="msg_log_in_with_goo">Log In with Google</string>
    <string name="lbl_food">Food</string>
    <string name="lbl_4_40" translatable="false">- 4,40\u20ac</string>
    <string name="lbl_wallet">Wallet</string>
    <string name="lbl_balance">Balance</string>
    <string name="lbl_today">Today</string>
    <string name="lbl_transportation">Transportation</string>
    <string name="lbl_transaction">Transaction</string>
    <string name="lbl_current_budget">Current Budget</string>
    <string name="lbl_total_budget">Total Budget</string>
    <string name="lbl_04_30" translatable="false">04:30</string>
    <string name="msg_detail_transact">Detail Transaction</string>
    <string name="lbl_you_re_all_set">You\u2019re all set!</string>
    <string name="lbl_see_all">Show all</string>
    <string name="lbl_cashcoach" translatable="false">CashCoach.</string>
    <string name="lbl_12" translatable="false">- 12\u20ac</string>
    <string name="msg_don_t_worry_e">Don\'t worry. Enter your email and we\'ll send you a link to reset your password.</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_how_much">How much?</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_luka_mlinari" translatable="false">Luka Mlinarič</string>
    <string name="lbl_18" translatable="false">- 18\u20ac</string>
    <string name="lbl_1_6802" translatable="false">+ 1.680\u20ac</string>
    <string name="lbl_profile">Profile</string>
    <string name="msg_sign_up_with_go">Sign Up with Google</string>
    <string name="lbl" translatable="false">\u20ac</string>
    <string name="msg_write_a_descrip">Write a description</string>
    <string name="msg_saturday_4_june">Saturday, 4. June 2021 16:30</string>
    <string name="lbl_07_30" translatable="false">07:30</string>
    <string name="lbl_email">E-mail</string>
    <string name="lbl_eur" translatable="false">EUR</string>
    <string name="lbl_year">Year</string>
    <string name="lbl_surname">Surname</string>
    <string name="lbl_0" translatable="false">0</string>
    <string name="lbl_attachment">Attachment</string>
    <string name="lbl_16_20" translatable="false">16:20</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_theme">Theme</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="msg_restavracija_ma" translatable="false">Restavracija Mango</string>
    <string name="lbl_german_de">German (DE)</string>
    <string name="lbl_netflix" translatable="false">Netflix</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_or">Or</string>
    <string name="msg_use_device_them">Use device theme</string>
    <string name="lbl_piechart" translatable="false">PieChart</string>
    <string name="lbl_1_200" translatable="false">1.200\u20ac</string>
    <string name="lbl_1_680" translatable="false">1.680\u20ac</string>
    <string name="lbl_type">Type</string>
    <string name="msg_let_s_set_up_yo">Let\u2019s set up your account!</string>
    <string name="msg_please_enter_valid_nu">Please enter valid number</string>
    <string name="msg_please_enter_valid_pa">Please enter valid password</string>
    <string name="msg_please_enter_valid_email">Please enter valid email</string>
    <string name="msg_please_enter_valid_text">Please enter valid text</string>
    <string name="add_attachment">Add Attachment</string>
    <string name="error_field_required">Field is required</string>
    <string name="error_invalid_email">Email is invalid</string>
    <string name="error_passwords_mismatch">The passwords do not match</string>
    <string name="error_terms_not_checked">You need to accept the Terms of Service</string>
    <string name="error_contains_numeric">Field must not contain numbers</string>
    <string name="error_invalid_password">Password must contain: \n- At least 1 Uppercase letter \n- At least 1 Lowercase letter \n- At least 1 Digit \n- At least 1 Special character \n- At least 10 characters \n- No whitespace</string>
    <string name="email_is_required">E-mail is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="an_error_occurred_please_try_again_later">An error occurred, please try again later</string>
    <string name="error_email_already_in_use">E-mail is already in use</string>
    <string name="error_invalid_credentials">Invalid credentials</string>
    <string name="password_reset_email_sent">If the email you entered matches an account, we\'ll send a reset code</string>
    <string name="error_email_empty">Please enter your email</string>
    <string name="lbl_log_out">Log out</string>
    <string name="accounts">Accounts</string>
    <string name="lbl_accounts">Accounts</string>
    <string name="lbl_wallets">Wallets</string>
    <string name="msg_continue_with_google">Continue with Google</string>
    <string name="lbl_name_surname">Name Surname</string>
    <string name="lbl_help">Help ❔</string>
    <string name="lbl_about">About the app</string>
    <string name="new_income_added">Income added</string>
    <string name="arrow_tag"><![CDATA[>]]></string>
    <string name="transactions">Transactions</string>
    <string name="please_enter_wallet_name">Please enter wallet name</string>
    <string name="please_enter_balance">Please enter balance</string>
    <string name="new_expense_added">Expense added</string>
    <string name="make_this_your_default_wallet">Make this your default wallet?</string>
    <string name="lbl_transactions">Transactions</string>
    <string name="lbl_category_with_colon">Category:</string>
    <string name="lbl_wallet_with_colon">Wallet:</string>
    <string name="lbl_start_date">Start date</string>
    <string name="lbl_end_date">End date</string>
    <string name="lbl_filter_date">Filter date</string>
    <string name="lbl_graph_budget">Budget graph</string>
    <string name="lbl_graph_income">Income categories</string>
    <string name="lbl_graph_expense">Expense categories</string>
    <string name="do_you_want_to_logout">Are you sure that you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lbl_incomes">Incomes</string>
    <string name="select_a_wallet_type">Select a wallet type…</string>
    <string name="bank_account">Bank account</string>
    <string name="savings_account">Savings account</string>
    <string name="other">Other</string>
    <string name="food_drinks"><![CDATA[Food & Drinks]]></string>
    <string name="clothes_shoes"><![CDATA[Clothes & Shoes]]></string>
    <string name="transportation">Transportation</string>
    <string name="health_beauty"><![CDATA[Health & Beauty]]></string>
    <string name="home_utilities"><![CDATA[Home & Utilities]]></string>
    <string name="entertainment">Entertainment</string>
    <string name="gifts_donations"><![CDATA[Gifts & Donations]]></string>
    <string name="education">Education</string>
    <string name="lbl_choose_category">Choose a category…</string>
    <string name="lbl_categories">Categories</string>
    <string name="delete_transaction">Delete transaction?</string>
    <string name="are_you_sure_you_want_to_delete_this_transaction">Are you sure you want to delete this transaction?</string>
    <string name="budget">Budget</string>
    <string name="initial_budget">Initial budget</string>
    <string name="wallet_budget">Wallet budget</string>
    <string name="lbl_filter_apply">Filter</string>
    <string name="lbl_filter_reset">Reset</string>
    <string name="ok">OK</string>
    <string name="about_app">CashCoach. is a mobile app for Android that allows users to easily track expenses and income. The app includes several features such as entering transaction data, setting savings targets, tracking monthly and yearly expenses, and graphs and spreadsheets. The application is based on a simple and intuitive user interface that allows fast and efficient monitoring of finances \nThe application offers services in terms of revenue entry and cost recording (category, value, date). The user can see his/her total spending, spending by different cost categories and spending over different time periods.</string>
    <string name="no_user_associated_with_this_e_mail_address">No user associated with this e-mail address</string>
    <string name="server_client_id" translatable="false">337861660196-gfr7d3as1el012stvglf1uglc9gaelmh.apps.googleusercontent.com</string>
</resources>