<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="transactionRowModel"
            type="com.tva.cashcoach.modules.transaction.data.model.TransactionRowModel" />
    </data>

    <LinearLayout
        android:id="@+id/linearRowtrash"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        style="@style/groupStylegray_50cornerRadius">

        <ImageButton
            android:background="@drawable/rectangle_bg_black_900_radius_16"
            android:id="@+id/imageTransaction"
            android:layout_height="@dimen/_40pxh"
            android:layout_marginBottom="@dimen/_12pxv"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="@dimen/_40pxh"
            android:paddingHorizontal="@dimen/_10pxh"
            android:paddingVertical="@dimen/_10pxv"
            android:scaleType="fitCenter"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:gravity="start"
            android:id="@+id/linearColumnshopping"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_9pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_weight="0.2"
            android:layout_width="0dp"
            android:orientation="vertical">

            <TextView
                android:ellipsize="end"
                android:id="@+id/txtDescription"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text=""
                style="@style/txtIntermedium16"
                tools:text="@string/lbl_shopping" />

            <TextView
                android:ellipsize="end"
                android:id="@+id/txtCategory"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text=""
                style="@style/txtIntermedium13"
                tools:text="@string/lbl_groceries" />
        </LinearLayout>

        <LinearLayout
            android:gravity="end"
            android:id="@+id/amountAndTime"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_weight="0.18"
            android:layout_width="0dp"
            android:orientation="vertical">

            <TextView
                android:ellipsize="end"
                android:gravity="end"
                android:id="@+id/txtAmount"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text=""
                style="@style/txtIntersemibold16"
                tools:text="@string/lbl_120" />

            <TextView
                android:ellipsize="end"
                android:id="@+id/txtTime"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text=""
                style="@style/txtIntermedium13"
                tools:text="@string/lbl_10_00" />
        </LinearLayout>
    </LinearLayout>
</layout>
