<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listquestionRowModel"
            type="com.tva.cashcoach.modules.transaction.data.model.ListquestionRowModel" />
    </data>

    <LinearLayout
        android:id="@+id/linearRowquestion"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        style="@style/groupStylegray_50cornerRadius">

        <ImageButton
            android:background="@drawable/rectangle_bg_black_900_radius_16"
            android:id="@+id/btnQuestion"
            android:layout_height="@dimen/_60pxh"
            android:layout_marginBottom="@dimen/_15pxv"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="@dimen/_60pxh"
            android:paddingHorizontal="@dimen/_13pxh"
            android:paddingVertical="@dimen/_13pxv"
            android:scaleType="fitCenter"
            android:src="@drawable/img_question"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:gravity="start"
            android:id="@+id/linearColumnsalary"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_19pxv"
            android:layout_marginStart="@dimen/_9pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_weight="0.55"
            android:layout_width="0dp"
            android:orientation="vertical">

            <TextView
                android:ellipsize="end"
                android:id="@+id/txtSalary"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{listquestionRowModel.txtSalary}"
                style="@style/txtIntermedium16"
                tools:text="@string/lbl_salary" />

            <TextView
                android:ellipsize="end"
                android:id="@+id/txtBuyanAvocadoThree"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{listquestionRowModel.txtBuyanAvocadoThree}"
                style="@style/txtIntermedium13"
                tools:text="@string/lbl_salary_for_july" />
        </LinearLayout>

        <LinearLayout
            android:gravity="end"
            android:id="@+id/linearColumnprice"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_21pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_9pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_weight="0.24"
            android:layout_width="0dp"
            android:orientation="vertical">

            <TextView
                android:ellipsize="end"
                android:gravity="start"
                android:id="@+id/txtPriceThree"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{listquestionRowModel.txtPriceThree}"
                style="@style/txtIntersemibold16_1"
                tools:text="@string/lbl_1_6802" />

            <TextView
                android:ellipsize="end"
                android:id="@+id/txtTimeThree"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{listquestionRowModel.txtTimeThree}"
                style="@style/txtIntermedium13"
                tools:text="@string/lbl_04_30" />
        </LinearLayout>
    </LinearLayout>
</layout>
