<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addNewWalletVM"
            type="com.tva.cashcoach.modules.addnewwallet.data.viewmodel.AddNewWalletVM" />
    </data>

    <LinearLayout
        android:gravity="start"
        android:id="@+id/linearAddnewwallet"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        style="@style/groupStyleblack_900">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="match_parent"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:gravity="start"
                android:id="@+id/linearRowarrowleft"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageBack"
                    android:layout_height="@dimen/_16pxh"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="@dimen/_24pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_arrowleft" />

                <TextView
                    android:ellipsize="end"
                    android:id="@+id/txtTitle"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginEnd="@dimen/_35pxh"
                    android:layout_weight="0.85"
                    android:layout_width="0dp"
                    android:singleLine="true"
                    android:text="@{addNewWalletVM.addNewWalletModel.txtTitle}"
                    style="@style/txtIntersemibold18_3"
                    tools:text="@string/lbl_add_new_wallet" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:ellipsize="end"
            android:id="@+id/txtBalance"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_79pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{addNewWalletVM.addNewWalletModel.txtBalance}"
            style="@style/txtIntersemibold18_4"
            tools:text="@string/lbl_balance" />

        <EditText
            android:background="@android:color/transparent"
            android:ellipsize="end"
            android:hint="@string/lbl_0"
            android:id="@+id/etBalance"
            android:inputType="numberDecimal"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_20pxh"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@={addNewWalletVM.addNewWalletModel.etPriceValue}"
            android:textColorHint="@color/white"
            style="@style/etIntersemibold64"
            tools:ignore="Autofill" />

        <LinearLayout
            android:gravity="center_horizontal"
            android:id="@+id/linearColumninputwalletna"
            android:layout_marginTop="@dimen/_160pxv"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            style="@style/groupStylewhite_A700cornerRadius">

            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_gray_100_radius_16"
                android:ellipsize="end"
                android:hint="@string/lbl_name"
                android:id="@+id/etWalletName"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:paddingBottom="@dimen/_19pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_19pxv"
                android:singleLine="true"
                android:text="@={addNewWalletVM.addNewWalletModel.etInputWalletNaValue}"
                android:textColorHint="@color/gray_500"
                style="@style/etSolidRoundedOutline"
                tools:ignore="Autofill" />

            <Spinner
                android:background="@drawable/layer_list_bg_white_a700_border_gray_100_radius_16"
                android:gravity="start"
                android:id="@+id/spinnerWallet"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_24pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:paddingStart="@dimen/_8pxh"
                android:paddingTop="@dimen/_19pxv"
                android:paddingBottom="@dimen/_19pxv"
                android:prompt="@string/select_a_wallet_type"
                android:layout_width="match_parent"
                android:spinnerMode="dialog"
                tools:listitem="@layout/spinner_item" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:id="@+id/linearColumncontinue"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            style="@style/groupStylewhite_A700">

            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end"
                android:gravity="center"
                android:id="@+id/btnContinue"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16pxh"
                android:layout_marginVertical="@dimen/_16pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_17pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:text="@string/lbl_continue"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_3"
                tools:text="@string/lbl_continue" />
        </LinearLayout>
    </LinearLayout>
</layout>
